--- a/index.html
+++ b/index.html
@@ -5,29 +5,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>AnswerVault</title>
 </head>
 <body>
     <header>
         <div id="stats">
-            <div id="true">Right: &nbsp;&nbsp;<span id="right">0</span></div>
+            <div id="true">Correct: <span id="right">0</span></div>
             <div id="false">Wrong: <span id="wrong">0</span></div>
+            <div id="streak">Streak: <span id="streak-count">0</span>🔥</div>
         </div>
-        <button id="add-btn">+</button>
+        <div class="header-controls">
+            <button id="settings-btn" aria-label="Open settings">
+                <svg viewBox="0 0 24 24" class="icon">
+                    <path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.07.62-.07.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/>
+                </svg>
+            </button>
+            <button id="add-btn" aria-label="Add new question">
+                <svg viewBox="0 0 24 24" class="icon">
+                    <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+                </svg>
+            </button>
+        </div>
     </header>
-    <div id="question">?</div>
-    <div id="add-screen">
-        <input id="add-question-in" class="add-items add-in" type="text" placeholder="Enter question...">
-        <input id="add-answer-in" class="add-items add-in" type="text" placeholder="Enter answer...">
-        <button id="add-submit" class="add-items">Submit</button>
+
+    <div id="category-selector">
+        <select id="category-select">
+            <option value="all">All Categories</option>
+        </select>
     </div>
+
+    <div id="question-container">
+        <div id="category-tag"></div>
+        <div id="question">?</div>
+        <div id="hint-container">
+            <button id="hint-btn" class="hidden">Show Hint</button>
+            <p id="hint-text" class="hidden"></p>
+        </div>
+    </div>
+
+    <div id="add-screen" class="modal">
+        <div class="modal-content">
+            <input id="add-question-in" class="add-items add-in" type="text" placeholder="Enter question...">
+            <input id="add-answer-in" class="add-items add-in" type="text" placeholder="Enter answer...">
+            <input id="add-hint-in" class="add-items add-in" type="text" placeholder="Enter hint (optional)...">
+            <input id="add-category-in" class="add-items add-in" type="text" placeholder="Enter category...">
+            <button id="add-submit">Add Question</button>
+            <button id="add-cancel" class="secondary-btn">Cancel</button>
+        </div>
+    </div>
+
+    <div id="progress-container">
+        <div id="progress-bar">
+            <div id="progress-fill"></div>
+        </div>
+        <p id="progress-text">Progress: <span id="progress-percentage">0</span>%</p>
+    </div>
+
     <div id="update-notification">
         A new version is available.
         <button id="update-button" type="button">Update</button>
     </div>
+
+    <div id="settings-modal" class="modal">
+        <div class="modal-content">
+            <h2>Settings</h2>
+            <div class="settings-section">
+                <h3>Appearance</h3>
+                <button id="theme-toggle" class="settings-btn">
+                    <svg viewBox="0 0 24 24" class="icon">
+                        <path class="sun-icon" d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"/>
+                        <path class="moon-icon" d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-3.03 0-5.5-2.47-5.5-5.5 0-1.82.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1z"/>
+                    </svg>
+                    <span class="btn-text">Dark Mode</span>
+                </button>
+            </div>
+            <div class="settings-section">
+                <h3>App Management</h3>
+                <button id="check-update" class="settings-btn">
+                    <svg viewBox="0 0 24 24" class="icon">
+                        <path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"/>
+                    </svg>
+                    <span class="btn-text">Check for Updates</span>
+                </button>
+                <div id="update-status"></div>
+            </div>
+            <div class="settings-section">
+                <h3>Questions Management</h3>
+                <div id="questions-list"></div>
+            </div>
+            <div class="settings-section">
+                <h3>Reset Options</h3>
+                <button id="reset-stats" class="danger-btn">Reset Statistics</button>
+                <button id="reset-questions" class="danger-btn">Reset All Questions</button>
+                <button id="reset-app" class="danger-btn">Reset Entire App</button>
+            </div>
+            <button id="settings-close" class="secondary-btn">Close</button>
+        </div>
+    </div>
+
+    <div id="custom-alert" class="custom-alert">
+        <div class="alert-content">
+            <p id="alert-message"></p>
+            <div class="alert-buttons">
+                <button id="alert-confirm" class="alert-btn confirm-btn">Confirm</button>
+                <button id="alert-cancel" class="alert-btn cancel-btn">Cancel</button>
+            </div>
+        </div>
+    </div>
+
     <footer>
-        <input id="answer-in" type="text" placeholder="Type answer here...">
-        <button id="submit" type="button">Submit</button>
+        <div class="input-group">
+            <input id="answer-in" type="text" placeholder="Type answer here..." autocomplete="off">
+            <button id="submit" type="button">Submit</button>
+        </div>
+        <div id="result-feedback"></div>
     </footer>
     
     <script src="./script.js"></script>
